--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,8 @@ version = "0.1.0"
 authors = ["Jack Zark Yinger <jack.yinger@gmail.com>"]
 
 [dependencies]
-piston_window = "0.33.0"
-piston3d-gfx_voxel = "0.6.0"
+gfx = "0.10.1"
+gfx_window_glutin = "0.10.0"
+glutin = "0.4.8"
+gfx_device_gl = "0.9"
+cgmath = "0.7"
